feat: added CI/CD pipeline configuration